# ha-pv-optimization

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
docs/: ASSUMPTIONS.md  CONFIGURATION.md  INSTALL.md
examples/: appdaemon.yaml.example  apps.yaml.example  ha_pv_optimization_app.py  pv_optimization_app.py  secrets.yaml.example  site.yaml.example
examples/systemd/: ha-pv-optimization.env.example  ha-pv-optimization.service  pv-optimization.env.example  pv-optimization.service
src/ha_pv_optimization/: __init__.py  appdaemon.py  config.py  controller.py  core.py  device_models.py  models.py  replay.py  signals.py  storage.py
src/pv_optimization/: __init__.py  appdaemon.py
tests/: test_appdaemon.py  test_config.py  test_core.py  test_device_models.py  test_replay.py  test_signals.py  test_storage.py
