[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ha-pv-optimization"
version = "0.1.0"
description = "Generic AppDaemon controller for coarse PV and battery power-setpoint optimization in Home Assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "appdaemon>=4.4,<5",
]
keywords = ["appdaemon", "home-assistant", "pv", "battery", "energy"]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ha_pv_optimization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
